@@ -1,0 +1,7 @@
+<html>
+<script>window.location.toString = function() { return "http://webkit.org"; }
+</script>
+<body>
+You should see this.
+</body>
+</html>
